add: validation other user cannot edit posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,12 +5,15 @@
 		<div class="col-sm-6 ml-3 mt-3">
 			<h4>Post title: <strong><%= @post.post_title%></strong></h4><%= @programmer.name %><br/>
 			<%= @post.content %><br/>
-			<%=link_to @post.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
-			<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-info"%>
-			<%= link_to 'Delete', programmer_post_path(@programmer), :class => "btn btn-info",
-			      method: :delete,
-			      data: { confirm: 'Are you sure?' } %>
-
+			<%=link_to @post.programmer.name, programmer_path(@post.programmer.id), :style =>"color: #ff82f4" %><br/>
+			<% if @post.programmer.id == current_user.id %>
+				<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-info"%>
+				<%= link_to 'Delete', programmer_post_path(@programmer), :class => "btn btn-info",
+				      method: :delete,
+				      data: { confirm: 'Are you sure?' } %>
+			<% else %>
+				<%= link_to 'Back', posts_path %>
+			<% end %>
 	<br>
 	<br>
 
