--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
-			<h4>Post title: <strong><%= @post.post_title%></strong></h4><%= @programmer.name %><br/>
+			<h4>Post title: <strong><%= @post.post_title%></strong></h4><br/>
 			<%= @post.content %><br/>
 			<%=link_to @post.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
 			<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-info"%>
