--- a/app/views/programmers/edit.html.erb
+++ b/app/views/programmers/edit.html.erb
@@ -1,27 +1,21 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
-
-			<div class="row	mt-3">
 			<h3>Update my profile</h3>
+								<%= form_with model: @programmer, url: programmer_path(@programmer), method: "patch", local: true do |form| %>
+										<%= form.hidden_field :id, value:@programmer.id %>
 
-					<%= form_with model: @programmer, url: programmer_path(@programmer), method: "patch", local: true do |form| %>
-							<%= form.hidden_field :id, value:@programmer.id %>
-
-	            <%= form.label :name %>
-	            <%= form.text_field :name %> <br>
+										<%= form.label :name %>:
+										<%= form.text_field :name %> <br>
 
 
-	            <%= form.label :level %>
-	            <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %><br>
+										<%= form.label :level %>:
+										<%= @programmer.level %> <br>
 
-	            <%= form.label :photo_url %>
-	            <%= form.file_field :photo_url %><br>
-
-									<%= form.submit "Save" %>
-
-	        <% end %>
-		</div>
+										<%= form.label :photo_url %>:
+										<%= form.file_field :photo_url %><br>
+										<%= form.submit "Save" %>
+										<% end %>
     </div>
   </div>
 </div>
