--- a/app/views/programmers/new.html.erb
+++ b/app/views/programmers/new.html.erb
@@ -2,8 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 
-			<div class="row	mt-3">
-			<h3>Make changes to my profile</h3>
+			<h3>Create my profile</h3>
         <%= form_with scope: :programmer, url: programmers_path, local: true do |form| %>
 
             <%= form.label :name %>
@@ -17,7 +16,6 @@
             <%= form.file_field :photo_url %><br>
             <%= form.submit "Create" %>
  						<% end %>
-		</div>
     </div>
   </div>
 </div>
