--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= action_cable_meta_tag %>
   </head>
 
   <body>
@@ -32,7 +33,7 @@
 	 					<%= link_to 'All posts', posts_path %>
 	 				</div>
 	 				<div style="padding-left: 30px;">
-	 					<%= link_to 'Chatbox' %>
+	 					<%= link_to 'Chatbox', chatroom_path %>
 	 				</div>
 	 				<div style="padding-left: 30px;">
 	 					<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
