Updated buttons and links layout

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -17,7 +17,7 @@
 				</p>
 			<% end %>
 
-			<%= link_to 'Back', posts_path %>
+			<%= link_to 'Back', posts_path, :class => "text-info" %>
 		</div>
 	</div>
 </div>
