--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,3 @@
-<%= link_to 'Back', posts_path %>
-
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
@@ -15,6 +13,7 @@
 				<%= form.submit :class => "btn btn-info"%>
 			</p>
 		<% end %>
+		<%= link_to 'Back', posts_path, :class => "text-info" %>		
 		</div>
 	</div>
 </div>
