add: background image, and truncate post length in post index view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,11 @@
 .name-footer {
 	float:right;
 }
+
+body {
+	background-image: url("/images/grey-background-v1.jpg");
+}
+
+.card {
+	background-image: url("/images/grey-background-v1.jpg");
+}
