--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<div class="d-flex justify-content-center">
+  <div class="col-sm-5">
+      <div class="card">
+        <div class="card-header"><h2>Forgot your password?</h2></div>
+          <div class="card-body">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+                <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+                  <div class="form-group">
+                    <%= f.label :email %><br />
+                    <%= f.email_field :email, autofocus: true, class: 'form-control', autocomplete: "email" %>
+                  </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+                  <div class="actions">
+                    <%= f.submit "Send me reset password instructions", class:"btn btn-warning" %>
+                  </div>
+                <% end %>
+              </div>
+                <div class="card-footer"><%= render "devise/shared/links" %></div>
+        </div>
+    </div>
+</div>
