modify: changed bootstrap container-fluid to container

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 			<h1>Top Questions</h1>
