--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 			<h4>Post title: <strong><%= @post.post_title%></strong></h4><br/>
-			<%= @post.content %><br/>
+			<%= markdown(@post.content) %><br/>
 			<%=link_to @post.programmer.name, programmer_path(@post.programmer.id), :style =>"color: #222df7" %><br/>
 			<% if @post.programmer.id == current_user.id %>
 				<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-outline-info btn-sm"%>
